crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/check_stdin_write_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --stdin-file-path file.svelte
```

# Input messages

```block
<script context="module" lang="ts">
import { Form as   Form }     from './components/Form.svelte' ;
import     Button     from "./components/Button.svelte";
debugger;
statement ( ) ;
var foo: string = "";
</script>
<div></div>
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while applying fixes.
  


```

# Emitted Messages

```block
<script context="module" lang="ts">
import Button from "./components/Button.svelte";
import { Form } from "./components/Form.svelte";

debugger;
statement();
var foo: string = "";
</script>
<div></div>
```

```block
file.svelte:5:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    3 │ import { Form } from "./components/Form.svelte";
    4 │ 
  > 5 │ debugger;
      │ ^^^^^^^^^
    6 │ statement();
    7 │ var foo: string = "";
  
  i Unsafe fix: Remove debugger statement
  
    1 1 │   import Button from "./components/Button.svelte";
    2 2 │   import { Form } from "./components/Form.svelte";
    3   │ - 
    4   │ - debugger;
    5 3 │   statement();
    6 4 │   var foo: string = "";
  

```

```block
file.svelte:2:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    1 │ <script context="module" lang="ts">
  > 2 │ import Button from "./components/Button.svelte";
      │        ^^^^^^
    3 │ import { Form } from "./components/Form.svelte";
    4 │ 
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1 │ import·Button·from·"./components/Button.svelte";
      │ ------------------------------------------------

```

```block
file.svelte:3:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    1 │ <script context="module" lang="ts">
    2 │ import Button from "./components/Button.svelte";
  > 3 │ import { Form } from "./components/Form.svelte";
      │        ^^^^^^^^
    4 │ 
    5 │ debugger;
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1 1 │   import Button from "./components/Button.svelte";
    2   │ - import·{·Form·}·from·"./components/Form.svelte";
    3 2 │   
    4 3 │   debugger;
  

```

```block
file.svelte:7:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable foo is unused.
  
    5 │ debugger;
    6 │ statement();
  > 7 │ var foo: string = "";
      │     ^^^
    8 │ </script>
    9 │ <div></div>
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend foo with an underscore.
  
    4 4 │   debugger;
    5 5 │   statement();
    6   │ - var·foo:·string·=·"";
      6 │ + var·_foo:·string·=·"";
    7 7 │   
  

```
