crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/embedded_bindings_are_tracked_correctly.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script>
import { Component } from "./component.svelte";
let hello = "Hello World";
let array = [];
</script>

<html>
    <span>{hello}</span>
    {#each array as item}
    {/each}
    <Component />
</html>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
