crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/format_stdin_write_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --stdin-file-path file.svelte
```

# Input messages

```block
<script context="module" lang="ts">
import     Button     from "./components/Button.svelte";
const hello  :      string      = "world";
</script>
<div></div>
```

# Emitted Messages

```block
<script context="module" lang="ts">
import Button from "./components/Button.svelte";
const hello: string = "world";
</script>
<div></div>
```
