crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/format_svelte_ts_generics_files_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.svelte
```

## `file.svelte`

```svelte
<script lang="ts" generics="T extends Record<string, unknown>, U extends FormPath<T>">
import type { FormPath } from "sveltekit-superforms";
const hello: string = "world";
</script>
<div></div>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
