crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/formats_declaration_tags.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.svelte
```

## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script>
const source = { value: 1 };
</script>

{let value = source.value}
{const first = 1,
	second = { value: "}" }}
{const regex = /[}]/}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
